CSS/style.css
/*
  FIXME: not sure how to include both background images
  FIXME: name and age not centered
  TODO: grey text line spacing
  TODO: margins
*/

@import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap");

* {
  box-sizing: border-box;
  /* border: solid black 1px; */
  margin: 0;
  padding: 0;
}

body {
  background-image: url("../images/bg-pattern-top.svg");
  background-repeat: no-repeat;
  background-color: hsl(185, 75%, 39%);
}

/* typography */

.grey-text {
  font-family: "Kumbh Sans", sans-serif;
  font-weight: 400;
  font-size: 10px;
  color: hsl(227, 10%, 46%);
}

.black-text {
  font-family: "Kumbh Sans", sans-serif;
  font-weight: 700;
  font-size: 18px;
  color: hsl(229, 23%, 23%);
}

#age {
  font-size: 18px;
}

#location {
  font-size: 12px;
}

/* card */

#profile-card {
  width: 350px;
  height: 400px;
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);

  background-color: white;
}

.card-corners {
  border-radius: 15px;
}

/* card header */

.card-top-corners {
  border-radius: 15px 15px 0px 0px;
}

/* card body */

.card-body-container {
  position: relative; /* allows me to position child elements with absolute */
}

#profile-picture {
  width: 96;
  height: 96;

  position: absolute;
  bottom: 50%;
  left: 50%;
  transform: translate(-50%, -5%);

  border: solid white 5px;
  border-radius: 50%;
}

#name-age-container {
  margin: 15% auto 0;
  width: 60%;
}

#name,
#age {
  display: inline-block;
}

#location {
  text-align: center;
}

/* card footer */

.card-footer-block {
  display: inline-block;
  width: 32.5%;
}

.card-footer-block p {
  text-align: center;
}

/* attribution */

.attribution {
  width: 100%;
  position: fixed;
  bottom: 5px;
  font-size: 11px;
  text-align: center;
  font-family: "Kumbh Sans", sans-serif;
}
.attribution a {
  color: hsl(228, 45%, 44%);
}

/*
# Front-end Style Guide

## Layout

The designs were created to the following widths:

- Mobile: 375px
- Desktop: 1440px

## Colors

### Primary

Dark cyan: hsl(185, 75%, 39%)
Very dark desaturated blue: hsl(229, 23%, 23%)
Dark grayish blue: hsl(227, 10%, 46%)

### Neutral

Dark gray: hsl(0, 0%, 59%)

## Typography

### Body Copy

- Font size (name and stats): 18px

### Font

- Family: [Kumbh Sans](https://fonts.google.com/specimen/Kumbh+Sans)
- Weights: 400, 700
*/

